<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ElevatorMaintenance</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!-- 登录界面 -->
    <string name="userLogin">员工登录</string>
	<string name="userId">员工号</string>
	<string name="userPassword">密码</string>
	
	<!-- 主界面 -->
	<string name="workOrderSearch">工单查询</string>
	<string name="signIn">一键签到</string>
	<string name="workOrderFeedback">工单反馈</string>
	<string name="elevatorRecord">电梯档案</string>
	<string name="employeeInfo">员工信息</string>
	
	<!-- 功能按钮 -->
	<string name="back">返回</string>
	<string name="tryAgain">重试</string>
	<string name="receiveOrder">接单</string>
	<string name="cancelOrder">取消接单</string>
	<string name="searchElevatorRecord">查询电梯档案</string>
	<string name="navigation">目的地导航</string>
	<string name="searchFaultHistory">查询故障历史</string>
	
	<!-- 专有名词 -->
	<string name="workOrderDetail">工单详情</string>
	<string name="faultHistory">故障历史</string>
	<string name="faultDetail">故障详情</string>
	
	<!-- 工单类型 -->
	<string name="maintainOrder">保养工单</string>
	<string name="maintain">保养</string>
	<string name="faultOrder">故障工单</string>
	<string name="fault">故障</string>
	
	<!-- 工单完成状态 -->
	<string name="unfinished">未完成</string>
	<string name="finished">已完成</string>
	<string name="overdue">超期</string>
	
	<!-- 工单详情 -->
	<string name="workOrderId">工单号</string>
	<string name="workOrderState">工单状态</string>
	<string name="received">已接单</string>
	<string name="unreceived">未接单</string>
	<string name="elevatorId">电梯编号</string>
	<string name=":">:</string>
	<string name="elevatorAddress">电梯地址</string>
	<string name="faultOccuredTime">故障发生时间</string>
	<string name="faultDescription">故障描述</string>
	<string name="receiveState">接单状态</string>
	<string name="receiveTime">接单时间</string>
	<string name="fixEmployee">维修人员</string>
	<string name="fixGroup">维修小组</string>
	<string name="signInTime">签到时间</string>
	<string name="signInAddress">签到地点</string>
	<string name="signOutTime">签退时间</string>
	<string name="signOutAddress">签退地点</string>
	<string name="faultReason">故障原因</string>
	<string name="isFixed">是否修好</string>
	<string name="remark">备注</string>
	
	<string name="maintainType">保养类型</string>
	<string name="finalTime">截止日期</string>
	<string name="isFinished">是否完成</string>
	<string name="maintainItem">保养项目</string>
	
	<!-- 签到 -->
	<string name="currentAddress">当前地址</string>
	<string name="signInState">签到状态</string>
	
	<!-- 工单反馈 -->
	<string name="feedbackState">反馈状态</string>
	
	
	<!-- 电梯档案详情 -->
	<string name="elevatorNumber">电梯编码</string>
	<string name="modelNumber">电梯型号</string>
	<string name="elevatorType">电梯类型</string>
	<string name="elevatorDescription">电梯描述</string>
	<string name="maxWeight">载重</string>
	<string name="speed">速度</string>
	<string name="manufacturingDate">生产日期</string>
	<string name="lastMaintainTime">最近保养时间</string>
	<string name="buildingNumber">楼号</string>
	<string name="userUnit">使用单位</string>
	<string name="phone">联系电话</string>
	
	<!-- 员工信息 -->
	<string name="username">用户名</string>
	<string name="name">员工姓名</string>
	<string name="employeePhone">联系方式</string>
	<string name="groupMember">小组成员</string>
</resources>
